--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,16 @@
+/* 
+.fade-anim img {
+  animation: fadeAnim 0.5s ease-out;
+}
+@keyframes fadeAnim {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+} */
+
 @import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200&display=swap');
 @tailwind base;
 @tailwind components;
