--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
   }
 } */
 
-@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200;300&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
